fix: linked 'explore events' correctly, increased blog desc readability, removed 'About' from site header

--- a/site/static/styles/main.css
+++ b/site/static/styles/main.css
@@ -2161,7 +2161,7 @@ a>code {
 .blog-info p {
     margin: 0 0 0.3rem 0;
     font-size: 0.85rem;
-    color: #666;
+    color: #c8c9cd;
 }
 
 .blog-date {
